--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,202 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+:root{
+  --mainBackColor: rgb(42, 42, 42);
+  --componentColor: rgb(29, 30, 30);
+  --typeColor: white;
+  --accent: rgb(245, 70, 254);
+  --darkshadow: 2px 2px 8px 2px rgb(29, 28, 28);
+}
+html{
+  color: var(--typeColor);
+  background-color: var(--mainBackColor);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.topNav{
+  background-color: var(--componentColor);
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+} 
+.topNavGroupWrapper{
+ display: flex;
+gap: 16px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.topNavLink{
+  padding:6px;
+  transition: all .2s ease;
+  font-size: 18px;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.topNavLink:hover{
+  background-color: var(--accent) ;
+  border-radius: 4px;
+  border-style: inset;
+}
+.homeBanner{
+  background-color: rgb(163, 57, 144);
+  padding: 24px;
+  margin:1vw;
+  border-radius: 12px;
+}
+.homeBannerTitle{
+  font-size: 3rem;
+  padding: 16px;
+  padding-left:12vw;
+  
+}
+.homeBannerText{
+  padding-left:16px;
+}
+
+.searchIcon{
+  background-image: url('/magnifying-glass-solid.svg');
+  width: 24px;
+  height: 24px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+.searchBar{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.inputWrapper{
+  width: 40vw;
+  padding:12px;
+  background-color: var(--componentColor);
+  border-radius:8px;
+  display: flex;
+  box-shadow: var(--darkshadow);
+}
+.inputWrapper:focus-within{
+outline:2px solid white
+}
+.inputWrapper input{
+  background-color: var(--componentColor);
+  flex-grow: 1;
+  outline: none;
+}
+
+/*------------------------CREATE SNIP FORM ------------------------*/
+.createSnippet{
+  width: 50vw;
+  margin: 12px auto;
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  box-shadow: var(--darkshadow) ;
+  border-radius: 4px;
+}
+
+.createSnippet input[type="text"], .createSnippet select{
+  padding: 8px;
+  border-radius: 4px;
+  background-color: var(--componentColor);
+}
+ .createSnippet textarea{
+  border-radius: 4px;
+  background-color: var(--componentColor);
+  height: 200px;
+  padding: 8px;
+  font-family: "JetBrains Mono", monospace;
+ }
+
+
+.createSnippet input[type="submit"]{
+  background-color: var(--accent);
+  padding: 8px;
+  border-radius: 4px;
+  margin-top: 8px;
+  transition: 0.2s ease;
+}
+.createSnippet input[type="submit"]:hover{
+box-shadow: var(--darkshadow);
+cursor: pointer;
+}
+
+/*------------------------LOGIN FORM ------------------------*/
+.loginForm{
+  width: 50vw;
+  margin: 12px auto;
+  display: flex;
+  flex-direction: column;
+  padding: 12px;
+  box-shadow: var(--darkshadow) ;
+  border-radius: 4px;
+}
+.loginForm input{
+  padding: 8px;
+  border-radius: 4px;
+  background-color: var(--componentColor);
+}
+.loginForm button{
+  background-color: var(--accent);
+  padding: 8px;
+  border-radius: 4px;
+  margin-top: 8px;
+  transition: 0.2s ease;
+  width: 200px;
+}
+.loginForm button:hover{
+  box-shadow: var(--darkshadow);
+  cursor: pointer;
+}
+.loginButtonWrapper{
+  display: flex;
+  justify-content: center;
+}
+
+/* ----------------- SNIPS PREVIEW CARDS ------------------ */
+
+.snipPreviewWrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 12px;
+  margin:16px;
+}
+.snipPreviewItem{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color: var(--componentColor);
+  padding: 8px;
+  border-radius: 4px;
+  box-shadow: var(--darkshadow);
+}
+.snipPreviewTitle{
+  text-align: center;
+  font-size: 1.2rem;
+}
+.snipPreviewCode{
+  font-family: "Courier Prime", monospace ;
+  border: solid 1px rgb(72, 72, 72);
+  padding: 4px;
+}
+.snipPreviewCode::before{
+  content: '>';
+  margin-right: 4px;
+}
+.snipPreviewLanguage{
+  opacity: 80%;
+  color: var(--accent);
+}
+.snipPreviewActionsWrapper{
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  justify-content: end;
+}
+.snipPreviewActionsWrapper button{
+  width: 20px;
+}
+.snipPreviewIcon{
+  width: 20px;
+  cursor: pointer;
 }
