--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -54,7 +54,7 @@ gap: 16px;
 .homeBannerText{
   padding-left:16px;
 }
-
+/* -------------------------------SEARCH BAR ------------------------------- */
 .searchIcon{
   background-image: url('/magnifying-glass-solid.svg');
   width: 24px;
@@ -82,6 +82,26 @@ outline:2px solid white
   background-color: var(--componentColor);
   flex-grow: 1;
   outline: none;
+}
+.searchResults{
+  width: 40vw;
+  margin: 0 auto;
+  background-color: var(--componentColor);
+  box-sizing: var(--darkshadow);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.searchResult{
+  border: solid 1px gray;
+  padding: 4px;
+  border-radius: 4px;
+  width: 100%;
+}
+.searchResult:hover{
+  color: var(--accent)
 }
 
 /*------------------------CREATE SNIP FORM ------------------------*/
