--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -32,6 +32,7 @@ gap: 16px;
   padding:6px;
   transition: all .2s ease;
   font-size: 18px;
+  cursor: pointer;
 }
 
 .topNavLink:hover{
@@ -113,6 +114,7 @@ outline:2px solid white
   padding: 12px;
   box-shadow: var(--darkshadow) ;
   border-radius: 4px;
+  gap: 6px;
 }
 
 .createSnippet input[type="text"], .createSnippet select{
@@ -195,13 +197,17 @@ cursor: pointer;
   font-size: 1.2rem;
 }
 .snipPreviewCode{
-  font-family: "Courier Prime", monospace ;
-  border: solid 1px rgb(72, 72, 72);
-  padding: 4px;
-}
-.snipPreviewCode::before{
-  content: '>';
-  margin-right: 4px;
+  border-radius: 2px;
+  background-color: var(--componentColor);
+  padding: 8px;
+  font-family: "JetBrains Mono", monospace;
+  width: 100%;
+  height: auto;
+  min-height: 80px;
+  font-size: 14px;
+  resize: none;
+  border: solid 1px rgb(82, 82, 82);
+  cursor: pointer;
 }
 .snipPreviewLanguage{
   opacity: 80%;
